--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <div class="container"> 
       <div class="heading text-center">
 	   <div class="logo text-center"> 京汨科技</div>
-        <h2>Our New Awesome Website Is Coming Soon..</h2> </div>
+        <h2>我们新的网站即将发布上线......</h2> </div>
       <div class="countdown styled">
       	
       </div>
